fix deployment script

--- a/deployment/roles/oracle/templates/.env.j2
+++ b/deployment/roles/oracle/templates/.env.j2
@@ -81,6 +81,12 @@ ORACLE_SHUTDOWN_CONTRACT_METHOD={{ ORACLE_SHUTDOWN_CONTRACT_METHOD }}
 {% if ORACLE_HOME_START_BLOCK | default('') != '' %}
 ORACLE_HOME_START_BLOCK={{ ORACLE_HOME_START_BLOCK }}
 {% endif %}
+{% if ORACLE_HOME_RPC_BLOCK_POLLING_LIMIT | default('') != '' %}
+ORACLE_HOME_RPC_BLOCK_POLLING_LIMIT={{ ORACLE_HOME_RPC_BLOCK_POLLING_LIMIT }}
+{% endif %}
 {% if ORACLE_FOREIGN_START_BLOCK | default('') != '' %}
 ORACLE_FOREIGN_START_BLOCK={{ ORACLE_FOREIGN_START_BLOCK }}
+{% endif %}
+{% if ORACLE_FOREIGN_RPC_BLOCK_POLLING_LIMIT | default('') != '' %}
+ORACLE_FOREIGN_RPC_BLOCK_POLLING_LIMIT={{ ORACLE_FOREIGN_RPC_BLOCK_POLLING_LIMIT }}
 {% endif %}
